BE: splitted wallet routes + add filters on operations
